--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+0.7.4 2015.12.08
+修复：
+修复在大端模式下编译tinydtls提示大小端需要配置的bug。
+
+0.7.3 2015.12.04
+修复：
+修复网络连接中断后又恢复时，observe失效的问题。
+
 0.7.2 2015.11.28
 修复：
 修复observe的回调函数返回码可能为0的bug。
