fix observe bug

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1.0.8 2016.10.21
+修复：
+修复observer接收到错误后不能完全释放资源，需要用户手动removeObserver的bug。
+
 1.0.7 2016.09.23
 修复：
 修复 Espressif 平台下拷贝不对齐字段导致死机的bug；
