--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+1.1.0 2016.12.28
+新增：
+增加在线状态查询和订阅功能。
+
+优化：
+优化逻辑，当调用getValue/setValue/push/remove/addObserver等和服务端同步的 API 错误时，除了返回中携带错误信息之外，还会触发回调函数。
+
+修复：
+修复超时时间不准的 bug。
+修复连接成功之前调用 goOffline 无效的 bug。
+
 1.0.9 2016.12.20
 修复：
 修复初始化时内存分配失败可能导致内存未释放的bug。
