--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2.0.0 2017.03.27
+新增：
+Auth 接口升级到 Auth 2.0 版本（不再支持 Auth 1.0 ）。
+
+优化：
+优化连接层逻辑。
+
+删除：
+去除对 espressif 和 mxchip 平台的支持，如果确实需要，请使用 stable-1.x 版本。
+
 1.1.3 2017.02.28
 修复：
 大端模式下订阅事件超过256后拒绝接收的bug。
